--- a/core/app/views/Payments/_transportApply.html
+++ b/core/app/views/Payments/_transportApply.html
@@ -1,55 +1,57 @@
 #{form @PaymentUnits.approvePaymentFromShipment(payment.id)}
-<div class="row-fluid">
-  <div class="btn-toolbar">
+<div class="box">
+  <div class="box-header with-border">
     <a href="@{Payments.pdf(payment.id)}" target="_blank" class="btn btn-success">下载 PDF</a>
   </div>
-  <table class="table table-bordered table-condensed">
-    <tr>
-      <th width="200px;">关联运输资料</th>
-      <th width="150px;">实际到货时间</th>
-      <th width="150px;">费用类型</th>
-      <th>币种</th>
-      <th>单价</th>
-      <th>数量</th>
-      <th>均价</th>
-      <th>总价</th>
-      <th width="100px;">质检结果</th>
-      <th width="100px;">状态</th>
-      <th width="240px;">#</th>
-    </tr>
-      #{list items: units, as:'fee'}
-        <tr>
-          <td>
-              #{if fee.shipItem}
-                <a href="@{Shipments.show(fee.shipment.id)}#${fee.shipItem.id}" target="_blank">
-                ${fee.shipment.id} #${fee.shipItem.id}
-                </a>
-              #{/if}
-              #{else }
-                <a href="@{Shipments.show(fee.shipment.id)}" target="_blank">${fee.shipment.id}</a>
-              #{/else}
-          </td>
-          <td>#{time_tooltip time:fee.shipment.dates.receiptDate/}</td>
-          <td>${fee.feeType.nickName}</td>
-          <td>${fee.currency}</td>
-          <td>${fee.unitPrice}</td>
-          <td>${fee.unitQty}</td>
-          <td>${helper.Currency.CNY.symbol()} ${fee.averagePrice()}</td>
-          <td>${fee.amount()}</td>
-          <td>${fee.procureUnit?.result?.label()}</td>
-          <td>
-            <span class="label ${fee.stateLabel()}">${fee.state.label()}</span>
-          </td>
-          <td>
-            <a href="@{Applys.transport(payment.tApply.id)}#${fee.id}" target="_blank">
-            ${payment.tApply.serialNumber} #${fee.id}
-            </a>
-          </td>
-        </tr>
-      #{/list}
-    <tr>
-      <td colspan="11">#{bootstrap_pager pi:post, url: "/Payments/show/" + payment.id/}</td>
-    </tr>
-  </table>
+  <div class="box-body">
+    <table class="table table-bordered table-condensed">
+      <tr>
+        <th width="200px;">关联运输资料</th>
+        <th width="150px;">实际到货时间</th>
+        <th width="150px;">费用类型</th>
+        <th>币种</th>
+        <th>单价</th>
+        <th>数量</th>
+        <th>均价</th>
+        <th>总价</th>
+        <th width="100px;">质检结果</th>
+        <th width="100px;">状态</th>
+        <th width="240px;">#</th>
+      </tr>
+        #{list items: units, as:'fee'}
+          <tr>
+            <td>
+                #{if fee.shipItem}
+                  <a href="@{Shipments.show(fee.shipment.id)}#${fee.shipItem.id}" target="_blank">
+                  ${fee.shipment.id} #${fee.shipItem.id}
+                  </a>
+                #{/if}
+                #{else }
+                  <a href="@{Shipments.show(fee.shipment.id)}" target="_blank">${fee.shipment.id}</a>
+                #{/else}
+            </td>
+            <td>#{time_tooltip time:fee.shipment.dates.receiptDate/}</td>
+            <td>${fee.feeType.nickName}</td>
+            <td>${fee.currency}</td>
+            <td>${fee.unitPrice}</td>
+            <td>${fee.unitQty}</td>
+            <td>${helper.Currency.CNY.symbol()} ${fee.averagePrice()}</td>
+            <td>${fee.amount()}</td>
+            <td>${fee.procureUnit?.result?.label()}</td>
+            <td>
+              <span class="label ${fee.stateLabel()}">${fee.state.label()}</span>
+            </td>
+            <td>
+              <a href="@{Applys.transport(payment.tApply.id)}#${fee.id}" target="_blank">
+              ${payment.tApply.serialNumber} #${fee.id}
+              </a>
+            </td>
+          </tr>
+        #{/list}
+    </table>
+  </div>
+  <div class="box-footer">
+      #{bootstrap_pager_v3 pi:post, url: "/Payments/show/" + payment.id/}
+  </div>
 </div>
 #{/form}
