--- a/core/app/views/header_v3.html
+++ b/core/app/views/header_v3.html
@@ -1,5 +1,5 @@
 <header class="main-header">
-  <a href="@{Application.indexV3()}" class="logo">
+  <a href="@{Application.index()}" class="logo">
     <!-- mini logo for sidebar mini 50x50 pixels -->
     <span class="logo-mini"><b>EA</b></span>
     <!-- logo for regular state and mobile devices -->
