初始化首页信息

--- a/core/app/views/Application/topTenSkuByMarket.html
+++ b/core/app/views/Application/topTenSkuByMarket.html
@@ -3,7 +3,7 @@
 </p>
 
 #{list items:dtos, as:'a'}
-<div class="progress-group">
+<div class="progress-group" data-fid="${a.fid}">
   <span class="progress-text">
     <a href="javascript:void(0);" name="sku_href" data-fid="${a.fid}" style="cursor:pointer;">${a.fid}</a>
   </span>
