--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
       </a>
 
-      <a class="brand" href="@{Application.indexV3()}">${models.OperatorConfig.getVal("brandname")}</a>
+      <a class="brand" href="@{Application.index()}">${models.OperatorConfig.getVal("brandname")}</a>
 
       <div class="nav-collapse collapse">
         <ul class="nav">
