物料采购单 请款 价格取值 调整

--- a/core/app/views/Applys/material.html
+++ b/core/app/views/Applys/material.html
@@ -324,7 +324,7 @@
                             #{/list}
                         </td>
                         <td class="qty" qty="${procureUnit.planQty}">${procureUnit.planQty}</td>
-                        <td>${procureUnit.getCurrency().symbol()} ${procureUnit.getPrice()}</td>
+                        <td>${procureUnit.getCurrency().symbol()} ${procureUnit.planPrice}</td>
                         <td class="price" amount="${procureUnit.totalAmount()}">
                         ${procureUnit.getCurrency().symbol()} ${procureUnit.totalAmount().format('#,###.##')}</td>
                         <td>${procureUnit.materialPurchase.state.label()}</td>
