合作伙伴页面搜索框增加“物料编码”的检索

--- a/core/app/views/Cooperators/index.html
+++ b/core/app/views/Cooperators/index.html
@@ -24,7 +24,8 @@
 
             <div class="input-group">
               <span class="input-group-addon"><i class="icon-search"></i></span>
-              <input type="text" class="form-control" style="width:220px;" name="p.search" placeholder="全称 or SKU or 代码" value="${p.search}">
+              <input type="text" class="form-control" style="width:240px;" name="p.search"
+                     placeholder="全称 or SKU or 代码 or 物料编码" value="${p.search}">
               <input type="hidden" name="p.page" value="${p.page}">
             </div>
 
