--- a/core/app/views/Deliveryments/manual.html
+++ b/core/app/views/Deliveryments/manual.html
@@ -7,7 +7,6 @@
 #{errorMsgs /}
 #{flash_alert/}
 
-
 <div class="row">
   <div class="col-md-12">
     <form action="@{Deliveryments.createManual()}" class="form-horizontal" method="post" id="new_procureunit">
@@ -45,12 +44,21 @@
             <label for="" class="col-sm-1 control-label">价格</label>
             <div class="col-sm-2">
               <div class="form-inline">
-                <input type="text" class="form-control" id="unit_price" name="units[0].attrs.price"
+                <input type="text" class="form-control" id="unit_price" name="units[0].attrs.price" style="width:80px;"
                        value="${units[0]?.attrs?.price}">
               #{pickCurrency id:'unit_currency', name:'units[0].attrs.currency',class: 'form-control',
               c:units[0]?.attrs?.currency?:helper.Currency.CNY, native: 'aaa'/}
+                <span id="taxSpan"></span>
               </div>
             </div>
+            <label for="" class="col-sm-1 control-label">是否含税</label>
+            <div class="col-sm-2">
+              <select class="form-control" name="unit.containTax">
+                <option #{if unit.containTax} selected #{/if} value="true">是</option>
+                <option #{if !unit.containTax} selected #{/if} value="false">否</option>
+              </select>
+            </div>
+
             <label for="" class="col-sm-1 control-label">采购数量</label>
             <div class="col-sm-2">
               <div class="form-inline">
@@ -96,7 +104,8 @@
         <label for="" class="col-sm-1 control-label">价格</label>
         <div class="col-sm-2">
           <div class="form-inline">
-            <input type="text" class="form-control" id="unit_price" name="units[<%= num %>].attrs.price">
+            <input type="text" class="form-control" id="unit_price" name="units[<%= num %>].attrs.price"
+                   style="width:80px;">
             <select id="unit_currency" name="units[<%= num %>].attrs.currency" class="form-control">
             #{list items:helper.Currency.values(), as:'cr'}
               <option ${cr == helper.Currency.CNY ? 'selected' : ''} value="${cr}">${cr}</option>
@@ -128,6 +137,13 @@
           #{list items:models.User.COR, as:'c'}
             <option value="${c.name()}" ${c.name()==project?'selected':''}>${c.label()}</option>
           #{/list}
+          </select>
+        </div>
+        <label for="" class="col-sm-1 control-label">是否含税</label>
+        <div class="col-sm-2">
+          <select class="form-control" name="units[<%= num %>].containTax">
+            <option #{if unit.containTax} selected #{/if} value="true">是</option>
+            <option #{if !unit.containTax} selected #{/if} value="false">否</option>
           </select>
         </div>
       </div>
