--- a/core/app/views/Payments/show.html
+++ b/core/app/views/Payments/show.html
@@ -149,11 +149,7 @@
 
                   <div class="controls">
                     <input type="text" placeholder="最终支付金额" name="actualPaid" id="actualPaid">
-                  </div>
-                </div>
-                <div class="control-group">
-                  <div class="controls">
-                    <input type="submit" value="付款" class="btn btn-primary" data-confirm='请再次确认信息后付款'>
+                    <input type="submit" value="付款" class="btn btn-success  btn-xs" data-confirm='请再次确认信息后付款'>
                   </div>
                 </div>
               #{/form}
