修改汇签页面显示状态

--- a/core/app/views/Payments/showBatchApply.html
+++ b/core/app/views/Payments/showBatchApply.html
@@ -39,7 +39,7 @@
 
             <label for="pro_family" class="col-sm-2 control-label">审核状态</label>
             <div class="col-sm-3">
-              <input type="text" class="form-control" value="${apply.name}" class="input-xxlarge" required readonly>
+              <input type="text" class="form-control" value="${apply.status?.label()}" class="input-xxlarge" readonly>
             </div>
           </div>
 
